Implemented Database